alignment issue fixed

--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,7 @@ font-size: 1em;
 
 flex: 1;
 max-width:200px;
-
+align-items: center;
 background-color: #FFFFFF;
 filter: drop-shadow(0px 4px 4px #000000); 
    border:none;
